Potential fix for text outline on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .header-txt {
   color: #E1C362;
   margin-block: 0px;
-  -webkit-text-stroke: 1px black;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .App-footer {
@@ -217,7 +217,7 @@
 .game-timer {
   color: #E1C362;
   font-size: calc(10px + 1vmin);
-  -webkit-text-stroke: 0.04vmin black;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   margin-top: 3.5vmin;
 }
 
